syntax = "proto3";
package myprotobuf;

message MatrixRow {
  repeated double values = 1;
}

message Detection {
  double timestamp = 1;
  uint64 number = 2;
  double x = 3;
  double y = 4;
  repeated MatrixRow mat_data = 5;
}

message DetectionList {
  string uid = 1;
  repeated Detection dets = 2;
}